# 3d-engine

./: .gitignore  CMakeLists.txt  README.md
game/: CMakeLists.txt  README.md
game/src/: Input.cpp  Input.h  Wolfenstein3DClone.cpp  Wolfenstein3DClone.h  main.cpp
game/src/cameras/: FPSCamera.cpp  FPSCamera.h  FreeCamera.cpp  FreeCamera.h
game/src/fpsgame/: Player.cpp  Player.h
game/src/generators/: AbstractGenerator.cpp  AbstractGenerator.h  DungeonGenerator.cpp  DungeonGenerator.h  OverWorldGenerator.cpp  OverWorldGenerator.h
lib/: CMakeLists.txt  README.md
lib/assets/shaders/: phongFragment.glsl  phongVertex.glsl
lib/src/: library.h
lib/src/audio/: audio.c  audio.h
lib/src/gameplay/: Game.cpp  Game.h  MainLoop.cpp  MainLoop.h
lib/src/math/types/: Mat.h  Mat4.h  Vec2.h  Vec3.h  Vec4.h
lib/src/physics/collision/: CollisionChecker.cpp  CollisionChecker.h
lib/src/physics/collision/colliders/: BoxCollider.cpp  BoxCollider.h  PointCollider.cpp  PointCollider.h  SphereCollider.cpp  SphereCollider.h
lib/src/rendering/: Material.cpp  Mesh.cpp  Mesh.h  Texture.h  Window.cpp  Window.h
lib/src/rendering/actors/: AbstractCamera.cpp  AbstractCamera.h  Actor.cpp  Actor.h  Camera.cpp  Camera.h  Light.cpp  Light.h
lib/src/rendering/lighting/: BaseLight.cpp  BaseLight.h  DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
lib/src/rendering/scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h
lib/src/rendering/shader/: PhongShader.cpp  PhongShader.h  Shader.cpp  Shader.h
lib/src/rendering/surface/: Material.h  Texture.cpp  Texture.h
lib/src/util/: ModelLoader.cpp  ModelLoader.h  PerlinNoise2D.cpp  PerlinNoise2D.h  PerlinNoise3D.cpp  PerlinNoise3D.h  Time.cpp  Time.h
lib/test/: Vec2.cpp  hello_test.cpp
